<resources>
    <string name="app_name">Lesson5</string>
    <string name="exit_button">Exit</string>
    <string name="add_button">Add</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="back_button">Back</string>
    <string name="first_name_textview">First Name</string>
    <string name="last_name_textview">Last Name</string>
    <string name="age_textview">Age</string>
    <string name="sex_textview">Sex</string>
    <string name="location_textview">Location</string>
    <string name="salary_textview">Salary</string>
    <string name="occupation_textview">Occupation</string>
    <string name="no_person_textview">No person yet</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="menu_add">Add Person</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting">Settings</string>
    <string name="pref_general">General</string>
    <string name="pref_media">Media</string>
    <string name="pref_large_text_title">Enable/disable large text</string>
    <string name="pref_large_text_summary">Enable or disable large text</string>
    <string name="pref_toggle_vibr_title">Enable/disable vibration</string>
    <string name="pref_toggle_vibr_summary">Enable or disable vibration</string>
    <string name="pref_toggle_sound_title">Enable/disable sound</string>
    <string name="pref_toggle_sound_summary">Enable or disable sound</string>
    <string name="pref_toggle_img_summary">Show or hide person\'s image</string>
    <string name="pref_toggle_img_title">Show/Hide Images</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
</resources>
