<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/default_profile_image"
                android:contentDescription="@string/profile_image_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center">

            <EditText
                style="@style/editText"
                android:id="@+id/firstNameEditText"
                android:hint="@string/first_name_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/lastNameEditText"
                android:hint="@string/last_name_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/ageEditText"
                android:inputType="numberDecimal"
                android:hint="@string/age_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/sexEditText"
                android:hint="@string/sex_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/locationEditText"
                android:hint="@string/location_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/salaryEditText"
                android:inputType="number"
                android:hint="@string/salary_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/occupationEditText"
                android:hint="@string/occupation_textview"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>