<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/default_profile_image"
                android:contentDescription="@string/profile_image_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewLayout"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center">

            <TextView
                style="@style/textView"
                android:id="@+id/firstNameTextView"
                android:text="@string/first_name_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/lastNameTextView"
                android:text="@string/last_name_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/ageTextView"
                android:text="@string/age_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/sexTextView"
                android:text="@string/sex_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/locationTextView"
                android:text="@string/location_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/salaryTextView"
                android:text="@string/salary_textview"/>

            <TextView
                style="@style/textView"
                android:id="@+id/occupationTextView"
                android:text="@string/occupation_textview"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editLayout"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center">

            <EditText
                style="@style/editText"
                android:id="@+id/firstNameEditText"
                android:hint="@string/first_name_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/lastNameEditText"
                android:hint="@string/last_name_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/ageEditText"
                android:inputType="numberDecimal"
                android:hint="@string/age_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/sexEditText"
                android:hint="@string/sex_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/locationEditText"
                android:hint="@string/location_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/salaryEditText"
                android:inputType="number"
                android:hint="@string/salary_textview"/>

            <EditText
                style="@style/editText"
                android:id="@+id/occupationEditText"
                android:hint="@string/occupation_textview"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingTop="50dp"
        android:paddingRight="14dp"
        android:paddingBottom="5dp">

        <Button
            android:layout_weight="1.0"
            android:id="@+id/backButton"
            style="@style/RoundButton"
            android:text="@string/back_button"
            android:onClick="onBackButtonClick"/>

        <Button
            android:layout_weight="1.0"
            android:id="@+id/exitButton"
            style="@style/RoundButton"
            android:text="@string/exit_button"
            android:onClick="onExitButtonClick"/>

        <Button
            android:layout_weight="1.0"
            android:visibility="gone"
            android:id="@+id/cancelButton"
            style="@style/RoundButton"
            android:text="@string/cancel_button"
            android:onClick="onCancelButtonClick"/>

        <Button
            android:layout_weight="1.0"
            android:id="@+id/saveButton"
            android:visibility="gone"
            style="@style/RoundButton"
            android:text="@string/save_button"
            android:onClick="onSaveButtonClick"/>

    </LinearLayout>

</LinearLayout>