<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noPersonTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_person_textview"
            android:textSize="30sp"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/pager"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPanel"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            style="@style/RoundButton"
            android:layout_weight="1.0"
            android:id="@+id/exitButton"
            android:text="@string/exit_button"
            android:onClick="onExitButtonClick"/>

        <Button
            style="@style/RoundButton"
            android:layout_weight="1.0"
            android:id="@+id/viewButton"
            android:text="@string/add_button"
            android:onClick="onAddButtonClick"/>

    </LinearLayout>

</LinearLayout>

